# OpenWalter

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  env.sh
walter/: CMakeLists.txt
walter/alembic/: CMakeLists.txt  IWalterExpressionsSchema.cpp  IWalterExpressionsSchema.h  IWalterLayersSchema.cpp  IWalterLayersSchema.h  OWalterExpressionsSchema.cpp  OWalterExpressionsSchema.h  OWalterLayersSchema.cpp  OWalterLayersSchema.h  SchemaInfoDeclarations.h
walter/arnold/: CMakeLists.txt
walter/arnold/procedural/: CMakeLists.txt  delegate.cpp  delegate.h  engine.cpp  engine.h  index.cpp  index.h  main.cpp  plugin.cpp  plugin.h
walter/arnold/utility/: CMakeLists.txt  rdoArnold.cpp  rdoArnold.h
walter/cmake/: FindAlembic.cmake  FindAlembicHDF5.cmake  FindArnold.cmake  FindGLFW.cmake  FindGoogleTest.cmake  FindIlmBase.cmake  FindJsonCPP.cmake  FindMaya.cmake  FindMtoa.cmake  FindPyString.cmake  FindRdoResolver.cmake  FindTBB.cmake  FindUSD.cmake  FindZlib.cmake  version.cmake
walter/common/: CMakeLists.txt  PathUtil.cpp  PathUtil.h  abcExporterUtils.cpp  abcExporterUtils.h  abcshaderutils.cpp  abcshaderutils.h  to_string_patch.h
walter/common/walterWidgets/: Qt.py  __init__.py  itemStyle.py  utils.py  walterBaseTreeView.py  walterBaseVariantsMenu.py  walterComplexMenu.py  walterLayersView.py
walter/houdini/: CMakeLists.txt
walter/houdini/otls/: walter_procedural.hda
walter/houdini/src/: DM_WalterRenderHook.cpp  GU_WalterPackedImpl.cpp  GU_WalterPackedImpl.h  SOP_WalterNode.cpp  SOP_WalterNode.h  UsdToGtPrim.cpp  UsdToGtPrim.h  plugin.cpp  walterHoudiniUtils.cpp  walterHoudiniUtils.h  walterSpriteRenderer.cpp  walterSpriteRenderer.h
walter/katana/WalterIn/: AbcCook.h  ArbitraryGeomParamUtils.cpp  ArbitraryGeomParamUtils.h  ArrayPropUtils.cpp  ArrayPropUtils.h  CMakeLists.txt  CameraCook.cpp  CurvesCook.cpp  FaceSetCook.cpp  MaterialCook.cpp  NuPatchCook.cpp  ObjectCook.cpp  PointsCook.cpp  PolyMeshCook.cpp  ScalarPropUtils.cpp  ScalarPropUtils.h  SubDCook.cpp  Walter_Assign.py  Walter_In.py  XformCook.cpp  op.cpp  walterCompatibility.cpp  walterCompatibility.h  walterLayersWidget.py  walterUSDExtern.cpp  walterUSDExtern.h  walterUSDExtern.py  walterUSDOp.cpp  walterUSDOp.h  walterUSDOpCaboose.cpp  walterUSDOpCaboose.h  walterUSDOpDelegate.cpp  walterUSDOpDelegate.h  walterUSDOpEngine.cpp  walterUSDOpEngine.h  walterUSDOpIndex.cpp  walterUSDOpIndex.h  walterUSDOpUtils.cpp  walterUSDOpUtils.h  walterVariantsMenu.py
walter/maya/: CMakeLists.txt
walter/maya/AbcExport/: AbcExport.cpp  AbcWriteJob.cpp  AbcWriteJob.h  CMakeLists.txt  MayaCameraWriter.cpp  MayaLightWriter.cpp  MayaLightWriter.h  MayaLocatorWriter.cpp  MayaMeshWriter.cpp  MayaNurbsCurveWriter.cpp  MayaNurbsSurfaceWriter.cpp  MayaPointPrimitiveWriter.cpp  MayaTransformWriter.cpp  MayaUtility.cpp  MayaUtility.h  walterAbcExportExtensions.cpp  walterAbcExportExtensions.h
walter/maya/common/: CMakeLists.txt  mayaUtils.cpp  mayaUtils.h  walter.mod.in
walter/maya/icons/: displacement.xpm
walter/maya/mtoa/: CMakeLists.txt  mtoaVersion.h  plugin.cpp  walterTranslator.cpp  walterTranslator.h
walter/maya/scripts/: AEabcMayaShaderTemplate.mel  AEwalterOverrideTemplate.py  AEwalterStandinTemplate.py  walter.py  walterPurposeMenu.py  walterVariantsMenu.py  walterVisibilityMenu.py
walter/maya/walterMtoaConnection/: CMakeLists.txt  abcCacheExportCmd.cpp  abcCacheExportCmd.h  abcExporterUtils.cpp  abcExporterUtils.h  convertToArnold.cpp  convertToArnold.h  mtoaScene.cpp  mtoaScene.h  pluginMain.cpp
walter/maya/walterStandin/: CMakeLists.txt  rdoProfiling.cpp  rdoProfiling.h  walterAssignment.cpp  walterAssignment.h  walterAttributes.cpp  walterAttributes.h  walterCmd.cpp  walterCmd.h  walterDrawOverride.cpp  walterDrawOverride.h  walterOverrideNode.cpp  walterOverrideNode.h  walterPlugin.cpp  walterShaderUtils.cpp  walterShaderUtils.h  walterShapeNode.cpp  walterShapeNode.h  walterThreadingUtils.cpp  walterThreadingUtils.h  walterUsdUtils.cpp  walterUsdUtils.h
walter/resources/ma/: usd_variants.ma
walter/tests/arnold/: 00-displacement-from-maya.ass  00-displacement-from-maya.ass.exr  01-displacement-from-maya.ass  01-displacement-from-maya.ass.exr  02-point-instancer-from-maya.ass  02-point-instancer-from-maya.ass.exr  03-motion-blur-from-maya.ass  03-motion-blur-from-maya.ass.exr  04-attribute-inheritance.ass  04-attribute-inheritance.ass.exr  05-arnold-visibility-bug.ass  05-arnold-visibility-bug.ass.exr  06-uvs-subdivision.ass  06-uvs-subdivision.ass.exr  07-arnold-visibilities.ass  07-arnold-visibilities.ass.exr  08-triplanar-shader.ass  08-triplanar-shader.ass.exr  09-b365c58f35b1-broken-regex.ass  09-b365c58f35b1-broken-regex.ass.exr  10-6722c1d-aiComposite.ass  10-6722c1d-aiComposite.ass.exr  11-matrix-param_support.ass  11-matrix-param_support.ass.exr  12-point-instancer.ass  12-point-instancer.ass.exr  13-point-instancer-colors.ass  13-point-instancer-colors.ass.exr  output.exr
walter/tests/katana/: katana-test-render.py  testAlembicAttributes.katana  testAlembicPointCloudMotionBlur.katana  testInstances.katana  testInstancesAssignation.katana  testLightList.katana  testLightList.katana.exr  testPointInstancer.katana  testUSDLights.katana  testUSDPurposes.katana  testVariant.katana  testWalterAssign.katana  testWalterAssign.katana.exr
walter/tests/maya/: main.mel  testAttrTokens.mel  testCacheExpressions.mel  testExportTransforms.mel  testLights.mel  testOpenFile.mel  testPropertyOverrides.mel  testPurpose.mel  testSaveMaterials.mel  testSubdivisionOverrides.mel  testVariants.mel  testVisibility.mel
walter/usd/: CMakeLists.txt  plugInfoMerger.py  rdoCustomResource.cpp  rdoCustomResource.h  readPlugInfoObject.cpp  resourcer.c  schema.usda  walterUSDCommonUtils.cpp  walterUSDCommonUtils.h  walterUsdConversion.cpp  walterUsdConversion.h  walter_plugInfo.json.in
walter/utils/: houdini  katana  kick  maya
walter/viewer/: CMakeLists.txt  CameraControler.cpp  CameraControler.h  FreeCamera.cpp  FreeCamera.h  Scene.cpp  Scene.h  Types.h  View.cpp  View.h  main.cpp
(+223 files in other folders)
